--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/RegisterPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/RegisterPage.xaml
@@ -3,21 +3,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              Shell.FlyoutBehavior="Disabled"
              Shell.NavBarIsVisible="False"
-             x:Class="ENSIKLO.Views.RegisterPage">
+             x:Class="ENSIKLO.Views.RegisterPage"
+             BackgroundColor="WhiteSmoke">
     <StackLayout>
-        <Image VerticalOptions="CenterAndExpand" Source="Assets/logo.png" WidthRequest="200" HeightRequest="200"/>
+       
         <Frame VerticalOptions="CenterAndExpand" CornerRadius="10" Margin="150,0" Padding="100,35">
             <StackLayout>
-                <Entry Placeholder="Username" Text="{Binding Username, Mode=TwoWay}"></Entry>
-                <Entry Placeholder="Email" Text="{Binding Email, Mode=TwoWay}"></Entry>
-                <Entry Placeholder="Password" IsPassword="True" Text="{Binding Password, Mode=TwoWay}"></Entry>
-                <Entry Placeholder="Confirmation Password" IsPassword="True" Text="{Binding ConfirmationPassword, Mode=TwoWay}"></Entry>
-                <Button BackgroundColor="#009BF0" CornerRadius="10" TextColor="White" Text="Sign Up" Margin="0,20"
+                <Image VerticalOptions="CenterAndExpand" Source="Assets/logo.png" WidthRequest="200" HeightRequest="200"/>
+                <Label Text="Register" TextColor="#009BF0" FontSize="Medium" HorizontalOptions="CenterAndExpand" FontAttributes="Bold"/>
+                <Entry Placeholder="Username" Text="{Binding Username, Mode=TwoWay}" TextColor="Black" PlaceholderColor="Black" BackgroundColor="WhiteSmoke"></Entry>
+                <Entry Placeholder="Email" Text="{Binding Email, Mode=TwoWay}" TextColor="Black" PlaceholderColor="Black" BackgroundColor="WhiteSmoke"></Entry>
+                <Entry Placeholder="Password" IsPassword="True" Text="{Binding Password, Mode=TwoWay}"  TextColor="Black" PlaceholderColor="Black" BackgroundColor="WhiteSmoke"></Entry>
+                <Entry Placeholder="Confirmation Password" IsPassword="True" Text="{Binding ConfirmationPassword, Mode=TwoWay}" TextColor="Black" PlaceholderColor="Black" BackgroundColor="WhiteSmoke"></Entry>
+                <Button BackgroundColor="#009BF0" CornerRadius="10" TextColor="Black" Text="Sign Up" Margin="0,20" FontAttributes="Bold"
                         Command="{Binding SignUpCommand}"></Button>
                 <StackLayout Orientation="Horizontal">
-                    <Label Text="Have an account?"></Label>
+                    <Label Text="Have an account?" TextColor="Black" FontAttributes="Bold"></Label>
                     <Label Text="Sign In" 
-                           TextColor="#009BF0"	
+                           TextColor="#009BF0" FontAttributes="Bold"	
                             >
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer 
