--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/LibraryDetailPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/LibraryDetailPage.xaml
@@ -2,55 +2,62 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ENSIKLO.Views.LibraryDetailPage">
-    <StackLayout Spacing="20" Padding="15" Margin="20">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <StackLayout Grid.Column="0" Margin="75, 0, 0, 0">
-                <Image Source="{Binding Url_cover}" WidthRequest="180"/>
+
+    <ScrollView Orientation="Vertical">
+        <StackLayout Spacing="20" Padding="15" Margin="20">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <StackLayout Grid.Column="0" Margin="75, 0, 0, 0">
+                    <Image Source="{Binding Url_cover}" WidthRequest="180"/>
+                </StackLayout>
+                <StackLayout Grid.Column="1" Padding="20, -5, 0, 0">
+                    <Label Text="{Binding Title}" FontSize="Large" FontAttributes="Bold"/>
+                    <Label Text="{Binding Author}" FontSize="Medium" TextColor="DarkGray">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding AuthorTappedCommand}" />
+                        </Label.GestureRecognizers>
+                    </Label>
+
+                    <Label FontSize="Medium" TextColor="DarkGray">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="{Binding Publisher}"/>
+                                <Span Text=" ("/>
+                                <Span Text="{Binding Year_published, StringFormat='{0:MMMM dd, yyyy}'}" />
+                                <Span Text=")"/>
+                            </FormattedString>
+                        </Label.FormattedText>
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding PublisherTappedCommand}" />
+                        </Label.GestureRecognizers>
+                    </Label>
+
+                    <Label Text="{Binding Category}" FontSize="Medium" TextColor="DarkGray"/>
+
+                    <Grid Margin="0, 30, 0, 0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Button Text="Delete from Library" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="0" CornerRadius="15" BackgroundColor="#B91515" Command="{Binding RemoveFromLibraryCommand}"></Button>
+                        <Button Text="Start reading" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="1" CornerRadius="15"></Button>
+                    </Grid>
+                </StackLayout>
+
+            </Grid>
+            <StackLayout>
+                <Label Text="Description" FontSize="Medium"  Margin="75, 15, 0, 0" FontAttributes="Bold"/>
+                <Label Text="{Binding Description_book}" FontSize="Small"  Margin="75, 0, 75, 0" />
+                <Label Text="{Binding Keywords}" FontAttributes="Italic" FontSize="Micro" TextColor="Gray"  Margin="75, 0, 0, 0" />
             </StackLayout>
-            <StackLayout Grid.Column="1" Padding="20, -5, 0, 0">
-                <Label Text="{Binding Title}" FontSize="Large" FontAttributes="Bold"/>
-                <Label Text="{Binding Author}" FontSize="Medium" TextColor="DarkGray">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding AuthorTappedCommand}" />
-                    </Label.GestureRecognizers>
-                </Label>
 
-                <Label FontSize="Medium" TextColor="DarkGray">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <Span Text="{Binding Publisher}"/>
-                            <Span Text=" ("/>
-                            <Span Text="{Binding Year_published, StringFormat='{0:MMMM dd, yyyy}'}" />
-                            <Span Text=")"/>
-                        </FormattedString>
-                    </Label.FormattedText>
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding PublisherTappedCommand}" />
-                    </Label.GestureRecognizers>
-                </Label>
-
-                <Label Text="{Binding Category}" FontSize="Medium" TextColor="DarkGray"/>
-
-                <Grid Margin="0, 30, 0, 0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Button Text="Delete from Library" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="0" CornerRadius="15" BackgroundColor="#B91515" Command="{Binding RemoveFromLibraryCommand}"></Button>
-                    <Button Text="Start reading" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="1" CornerRadius="15"></Button>
-                </Grid>
-            </StackLayout>
-
-        </Grid>
-        <StackLayout>
-            <Label Text="Description" FontSize="Medium"  Margin="75, 15, 0, 0" FontAttributes="Bold"/>
-            <Label Text="{Binding Description_book}" FontSize="Small"  Margin="75, 0, 0, 0" />
-            <Label Text="{Binding Keywords}" FontAttributes="Italic" FontSize="Micro" TextColor="Gray"  Margin="75, 0, 0, 0" />
         </StackLayout>
-
-    </StackLayout>
+    </ScrollView>
 </ContentPage>
