--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/LibraryReadDetailPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/LibraryReadDetailPage.xaml
@@ -18,7 +18,14 @@
                     <Image Source="{Binding Url_cover}" WidthRequest="180"/>
                 </StackLayout>
                 <StackLayout Grid.Column="1" Padding="20, -5, 0, 0">
-                    <Label Text="{Binding Title}" FontSize="Large" FontAttributes="Bold"/>
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="{Binding Title}" FontSize="Large" FontAttributes="Bold"/>
+                        <Label Text="set as finished" HorizontalOptions="Start" FontAttributes="Italic" TextColor="Green">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding TappedCommand}" />
+                            </Label.GestureRecognizers>
+                        </Label>
+                    </StackLayout>
                     <Label Text="{Binding Author}" FontSize="Medium" TextColor="DarkGray">
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding AuthorTappedCommand}" />
@@ -47,7 +54,7 @@
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <Button Text="Delete from Library" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="0" CornerRadius="15" BackgroundColor="#B91515" Command="{Binding RemoveFromLibraryCommand}"></Button>
-                        <Button Text="Continue reading" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="1" CornerRadius="15" BackgroundColor="#6CBC5E"></Button>
+                        <Button Text="Continue reading" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="1" CornerRadius="15" BackgroundColor="#6CBC5E"></Button>                        
                     </Grid>
                 </StackLayout>
 
