--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/LibraryDetailPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/LibraryDetailPage.xaml
@@ -50,7 +50,7 @@
                     <Button Text="Start reading" HeightRequest="38" HorizontalOptions="CenterAndExpand" Grid.Column="1" CornerRadius="15" Command="{Binding ReadBookCommand}"></Button>
                 </Grid>
             </StackLayout>
-
+            </Grid>
         </StackLayout>
     </ScrollView>
 </ContentPage>
