--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/SearchLibraryPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/SearchLibraryPage.xaml
@@ -82,7 +82,7 @@
 
 
 
-                                            <Label Text="{Binding libraryItem.Description_book}"
+                                            <Label Text="{Binding libraryItem.Author}"
                                                             Grid.Row="1"
                                                             Grid.Column="1"
                                                             VerticalOptions="Start"
